--- a/inte_dashboard/templates/inte_dashboard/bootstrap3/subject/dashboard.html
+++ b/inte_dashboard/templates/inte_dashboard/bootstrap3/subject/dashboard.html
@@ -7,5 +7,6 @@
 {% block top_bar %}
 
     {% include "inte_dashboard/bootstrap3/subject/dashboard/top_bar.html" %}
+    <p><small>Recruited from {{ recruitment_clinic_name }}</small></p>
 
 {% endblock top_bar %}
