--- a/inte_edc/templates/inte_edc/bootstrap3/home.html
+++ b/inte_edc/templates/inte_edc/bootstrap3/home.html
@@ -82,6 +82,10 @@
                            class="list-group-item"><i
                                 class="fas fa-medkit fa-lg fa-fw"></i>&nbsp;Pharmacy</a>
                     {% endif %}
+                    {% if perms.canned_views %}
+                      <a id="home_canned_views" href="{% url 'canned_views:home_url' %}" class="list-group-item">
+                        <i class="fas fa-list-alt fa-lg fa-fw"></i>Custom QA Reports</a>
+                    {% endif %}
                     {% if perms.edc_export %}
                         <a href="{% url 'edc_export:home_url' %}" class="list-group-item"><i
                                 class="fas fa-file-export fa-lg fa-fw"></i>&nbsp;Export&nbsp;data</a>
